tests/expectations/compiler/function/complex_recursion_fail.out
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:24:16
     |
  24 |         return six(n);
     |                ^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:28:16
     |
  28 |         return seven(n) + eight(n);
     |                ^^^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:28:27
     |
  28 |         return seven(n) + eight(n);
     |                           ^^^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:32:16
     |
  32 |         return five(n);
     |                ^^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:36:16
     |
  36 |         return five(n);
     |                ^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:4:12
     |
   4 |     return two(n);
     |            ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:9:12
     |
   9 |     return three(n) + four(n);
     |            ^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:9:23
     |
   9 |     return three(n) + four(n);
     |                       ^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:14:12
     |
  14 |     return one(n);
     |            ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:19:12
     |
  19 |     return one(n);
     |            ^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `test.aleo/five` --> `test.aleo/six` --> `test.aleo/seven` --> `test.aleo/five`
